--- a/src/components/TabBar/index.module.scss
+++ b/src/components/TabBar/index.module.scss
@@ -12,7 +12,7 @@
   align-items: flex-start;
   justify-content: space-around;
   box-shadow: 0 -4rpx 20rpx rgba(0, 0, 0, 0.05);
-  z-index: 1000;
+  z-index: 100;
   box-sizing: content-box;
 }
 
